--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-preprocess": "^4.0.0",
-    "angular-parse": "AlexeyGrishin/angular-parse" 
+    "grunt-preprocess": "^4.0.0"
   }
 }
